# PetMatch

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
PetMatch/: README.md  index.html
backend-api/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.build.tsbuildinfo
backend-api/src/: app.module.ts  main.ts  seed-data.ts  seed.ts
backend-api/src/common/: cities.ts  owner-id.decorator.ts
docs/apresentacao/: index.html
frontend-react-vite/: PetCard.jsx  README.md
frontend-react-vite/petmatch-frontend/frontend/: index.html  package.json  vite.config.js
mobile-app/: .gitignore  App.tsx  app.json  package-lock.json  package.json
mobile-app/src/: theme.ts
mobile-app/src/components/: .gitkeep
mobile-app/src/lib/: session.ts
mobile-app/src/navigation/: RootNavigator.tsx  types.ts
mobile-app/src/screens/: .gitkeep  ChatScreen.tsx  LoginScreen.tsx  MatchesScreen.tsx  ProfileScreen.tsx  RegisterAccountScreen.tsx  (+2 more)
recommendation-engine/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
recommendation-engine/app/: __init__.py  config.py  db.py  ranking.py  recall.py  schemas.py  service.py
recommendation-engine/tests/: test_api.py  test_ranking.py  test_recall.py  test_schemas.py
scripts/: dev.mjs
web-app/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json
web-app/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
(+67 files in other folders)
